test-suite/tests/ui/designated/no_argument.stderr
error: an argument must match the designated parameter
 --> tests/ui/designated/no_argument.rs:7:23
  |
7 | impl<#[stated] S> Test<> {
  |                       ^
